--- a/.gitignore
+++ b/.gitignore
@@ -155,6 +155,7 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
@@ -162,3 +163,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
+/lab_3_syntax_analysis/samples/
